fix header spacing

--- a/src/pages/resume.scss
+++ b/src/pages/resume.scss
@@ -53,7 +53,8 @@ h4{
 .parent {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  //grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: auto;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
